# rinaldolee.com

./: .gitignore  .gitmodules  NOTICE  astro.config.mjs  bun.lockb  package.json  tailwind.config.mjs
.github/workflows/: deploy.yml
public/: CNAME
rinaldolee_com_wasm/: Cargo.toml
rinaldolee_com_wasm/src/: lib.rs
rinaldolee_com_wasm/src/calculators/: ieee754.rs
src/components/: Background.astro  BlogPostCard.astro  CalculatorCard.astro  ProjectCard.astro
src/components/AppBar/: AppBar.astro  AppBarDesktop.astro  AppBarMobile.astro  AppBarProvider.astro
src/components/calculators/: BinomialDist.svelte  HyperGeoDist.svelte  IEEE754.svelte  NegBinomDist.svelte  PoissonDist.svelte
src/components/calculators/common/: BitDisplay.svelte
src/constants/: menu.ts  projects.ts
src/content/: config.ts
src/layouts/: Calculator.astro  Layout.astro
src/pages/: blog.astro  calculators.astro  index.astro
src/pages/blog/: [slug].astro
src/pages/calculators/: binomial-dist.mdx  hypergeometric-dist.mdx  ieee754.mdx  index.astro  negbinom-dist.mdx  poisson-dist.mdx
src/util/: bitsToBigInt.ts  getNeededBits.ts  math.ts
