[package]
name = "rinaldolee-com-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.5"
serde = "1.0.204"
serde_json = "1.0.120"
wasm-bindgen = { version = "0.2.92", features = ["serde_json"] }
